# Sniffer

./: .gitignore  .gitmodules
app/: build.gradle
app/src/androidTest/java/io/github/diov/sniffer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/io/github/diov/sniffer/: App.kt  MainActivity.kt
app/src/main/java/io/github/diov/sniffer/executor/: CommandParser.kt  Executable.kt  ExecutorOutput.kt  SnifferExecutor.kt
app/src/main/java/io/github/diov/sniffer/misc/: Core.kt  DeviceStorageApp.kt  Executable.kt
app/src/main/java/io/github/diov/sniffer/persistence/: Profile.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/io/github/diov/sniffer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
